# WoWTranslator

./: .env.example  .gitignore  CHANGELOG.md  EVALUATION.md  LICENSE  README.en.md  README.md  README_es.md  README_ru.md  RESEARCH.md  build.spec  curseforge-description.bbcode  curseforge-description.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
addon/BabelChat/: BabelChat.toc
addon/ChatTranslatorHelper/: ChatTranslatorHelper.toc  Core.lua
app/: about_dialog.py  cache.py  config.py  detector.py  glossary.py  glossary_data.py  hotkeys.py  i18n.py  lang_selector.py  main.py  memory_reader.py  overlay.py  parser.py  phrasebook.py  pipeline.py  reply_widget.py  settings_dialog.py  setup_wizard.py  slang.py  text_utils.py  translator.py  tray.py  watcher.py
scripts/: convert_pirson_glossary.py  publish.py
tests/: test_cache.py  test_glossary.py  test_parser.py  test_phrasebook.py  test_text_utils.py
