[project]
name = "babelchat"
version = "3.1.0"
description = "Real-time WoW chat translator with smart overlay"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/glossary_data.py" = ["E501"]
"app/i18n.py" = ["E501"]
